data/jupyterhub/traefik/traefik-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: loadbalancer
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
    - name: traefik
      port: 8080
      targetPort: traefik
  selector:
    app: traefik
